--- a/package.json
+++ b/package.json
@@ -18,9 +18,15 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@auth0/angular-jwt": "^5.1.2",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
+    "@ngrx/store": "^16.3.0",
+    "@ngrx/store-devtools": "^16.3.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
+    "jwt-decode": "^3.1.2",
+    "ngx-bootstrap-icons": "^1.9.2",
     "ngx-toastr": "^17.0.2",
     "ngx-webstorage": "^12.0.0",
     "rxjs": "~7.8.0",
